Add in Byteman test with rule.